--- a/02-dominando-os-principios/index.html
+++ b/02-dominando-os-principios/index.html
@@ -6,20 +6,19 @@
 </head>
 <body>
     <div id="app">
-        <p>{{ curso }}</p>
-        <p v-html="curso"></p>
+        <button v-on:click="incremetnar">Incrementar</button>
+        <p>Cliques no button: {{ cliques }} vezes</p>
     </div>
 
     <script type="text/javascript">
-
         new Vue({
             el: '#app',
             data: {
-                curso: 'Curso de <span style="color: darkgreen;">Vue.js</span>',
+                cliques: 0,
             },
             methods: {
-                nomeAluno: function() {
-                    return this.nome;
+                incremetnar: function() {
+                    return this.cliques++;
                 }
             }
         });
