--- a/02-dominando-os-principios/index.html
+++ b/02-dominando-os-principios/index.html
@@ -8,6 +8,7 @@
     <div id="app">
         <button v-on:click="incremetnar">Incrementar</button>
         <p>Cliques no button: {{ cliques }} vezes</p>
+        <p v-on:mousemove="atualizarCoordenadas">Coordenadas: x={{ x }} e y={{ y }} de movimentação do mouse sobre essa string.</p>
     </div>
 
     <script type="text/javascript">
@@ -15,10 +16,16 @@
             el: '#app',
             data: {
                 cliques: 0,
+                x: 0,
+                y: 0
             },
             methods: {
                 incremetnar: function() {
                     return this.cliques++;
+                },
+                atualizarCoordenadas: function(event) {
+                    this.x = event.clientX;
+                    this.y = event.clientY;
                 }
             }
         });
