--- a/02-dominando-os-principios/index.html
+++ b/02-dominando-os-principios/index.html
@@ -6,26 +6,19 @@
 </head>
 <body>
     <div id="app">
-        <button v-on:click="incremetnar">Incrementar</button>
-        <p>Cliques no button: {{ cliques }} vezes</p>
-        <p v-on:mousemove="atualizarCoordenadas">Coordenadas: x={{ x }} e y={{ y }} de movimentação do mouse sobre essa string.</p>
+        <input v-on:blur="exibirNome('Meu nome é: ', $event)">
+        <p>{{ nome }}</p>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
             data: {
-                cliques: 0,
-                x: 0,
-                y: 0
+                nome: ''
             },
             methods: {
-                incremetnar: function() {
-                    return this.cliques++;
-                },
-                atualizarCoordenadas: function(event) {
-                    this.x = event.clientX;
-                    this.y = event.clientY;
+                exibirNome: function(texto, event) {
+                    this.nome = texto + event.target.value;
                 }
             }
         });
