--- a/02-dominando-os-principios/index.html
+++ b/02-dominando-os-principios/index.html
@@ -11,6 +11,12 @@
             <button v-on:click="onClick('button', $event)">Clique com propagação do evento</button>
             <button v-on:click.stop="onClick('button', $event)">Clique sem propagação do evento</button>
         </p>
+
+        <form>
+            <input type="text">
+            <button type="submit" v-on:click="onSubmit">Enviar sem modificador</button>
+            <button type="submit" v-on:click.prevent="onSubmit">Enviar com modificador</button>
+        </form>
     </div>
 
     <script type="text/javascript">
@@ -19,6 +25,9 @@
             methods: {
                 onClick: function(element, event) {
                     console.log(event.type, ':', element);
+                },
+                onSubmit: function(event) {
+                    console.log('Formulário enviado!');
                 }
             }
         });
