--- a/02-dominando-os-principios/index.html
+++ b/02-dominando-os-principios/index.html
@@ -6,25 +6,21 @@
 </head>
 <body>
     <div id="app">
-        <input v-on:keyup="onKey" placeholder="Qualquer tecla">
+        <button v-on:click="onClick">Botão esquerdo</button>
         <br><br>
-        <input v-on:keyup.enter="onKey" placeholder="Teclar Enter">
+        <button v-on:click.middle="onClick">Botão do meio</button>
         <br><br>
-        <input v-on:keyup.enter.esc="onKey" placeholder="Teclar Enter ou Escape">
+        <button v-on:click.right="onClick">Botão direito</button>
         <br><br>
-        <input v-on:keyup.arrow-up="onKey" placeholder="Teclar ArrowUp (arrow-up)">
-        <br><br>
-        <input v-on:keyup.ctrl.enter="onKey" placeholder="Teclar CTRL + Enter (mas se pressionar CTRL + Shift + Enter ele funciona)">
-        <br><br>
-        <input v-on:keyup.ctrl.enter.exact="onKey" placeholder="Teclar CTRL + Enter (exact)">
+        <button v-on:click.right.prevent="onClick">Botão direito (sem menu de contexto)</button>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
             methods: {
-                onKey: function(event) {
-                    console.log(`Tecla "${event.key}" pressionada`);
+                onClick: function(event) {
+                    console.log(`Botão "${event.button}" pressionado`);
                 }
             }
         });
