--- a/03-trabalhando-com-listas-e-condicionais/index.html
+++ b/03-trabalhando-com-listas-e-condicionais/index.html
@@ -6,17 +6,18 @@
 </head>
 <body>
     <div id="app">
-        <p v-if="show">Olá Vue.js</p>
-        <p v-else>Até logo Vue.js</p>
-
-        <button @click="show = !show">Alternar</button>
+        <input v-model="nota" placeholder="Informe a Nota">
+        <p v-if="nota === 'A'">Parabéns, você tirou um "A"!</p>
+        <p v-else-if="nota === 'B'">Você tirou um "B", mas pode melhorar!</p>
+        <p v-else-if="nota === 'C'">Você precisa melhorar, estude mais. Sua nota foi: "C"</p>
+        <p v-else>Nota ainda não publicada</p>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
             data: {
-                show: true
+                nota: ''
             }
         });
     </script>
