--- a/03-trabalhando-com-listas-e-condicionais/index.html
+++ b/03-trabalhando-com-listas-e-condicionais/index.html
@@ -6,18 +6,22 @@
 </head>
 <body>
     <div id="app">
-        <input v-model="nota" placeholder="Informe a Nota">
-        <p v-if="nota === 'A'">Parabéns, você tirou um "A"!</p>
-        <p v-else-if="nota === 'B'">Você tirou um "B", mas pode melhorar!</p>
-        <p v-else-if="nota === 'C'">Você precisa melhorar, estude mais. Sua nota foi: "C"</p>
-        <p v-else>Nota ainda não publicada</p>
+        <ul>
+            <li>Olá Vue.js</li>
+            <li>Item 1</li>
+            <!-- Essa tag template tem o comportamento de div apenas para o framework, não é exibido essa tag no html final -->
+            <template v-if="show">
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </template>
+        </ul>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
             data: {
-                nota: ''
+                show: true
             }
         });
     </script>
