--- a/03-trabalhando-com-listas-e-condicionais/index.html
+++ b/03-trabalhando-com-listas-e-condicionais/index.html
@@ -6,22 +6,22 @@
 </head>
 <body>
     <div id="app">
-        <ul>
-            <li>Olá Vue.js</li>
-            <li>Item 1</li>
-            <!-- Essa tag template tem o comportamento de div apenas para o framework, não é exibido essa tag no html final -->
-            <template v-if="show">
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </template>
-        </ul>
+        <button @click="login = !login">Toggle</button>
+        <template v-if="login">
+            <label>Login: </label>
+            <input type="text" placeholder="Login" key="campoLogin">
+        </template>
+        <template v-else>
+            <label>E-mail: </label>
+            <input type="email" placeholder="E-mail" key="campoEmail">
+        </template>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
             data: {
-                show: true
+                login : true
             }
         });
     </script>
