--- a/03-trabalhando-com-listas-e-condicionais/index.html
+++ b/03-trabalhando-com-listas-e-condicionais/index.html
@@ -6,9 +6,17 @@
 </head>
 <body>
     <div id="app">
-        <h1>Heróis</h1>
+        <h1>Produtos</h1>
         <ul>
-            <li v-for="(item, index) in herois">{{ universo}}: <strong>{{ index }}-{{ item }}</strong></li>
+            <li v-for="value in produtos">{{ value }}</li>
+        </ul>
+
+        <ul>
+            <li v-for="(value, key) in produtos">{{ key }}: {{ value }}</li>
+        </ul>
+
+        <ul>
+            <li v-for="(value, key, index) in produtos">{{ index }}-{{ key }}: {{ value }}</li>
         </ul>
     </div>
 
@@ -16,14 +24,12 @@
         new Vue({
             el: '#app',
             data: {
-                universo : 'Marvel',
-                herois: [
-                    'Iron Man',
-                    'Thor',
-                    'Hulk',
-                    'Pantera Negra',
-                    'Homem-Aranha'
-                ]
+                produtos: {
+                    id: 1,
+                    nome: 'Teclado',
+                    marca: 'Dell',
+                    valor: 100
+                }
             }
         });
     </script>
