--- a/03-trabalhando-com-listas-e-condicionais/index.html
+++ b/03-trabalhando-com-listas-e-condicionais/index.html
@@ -6,31 +6,15 @@
 </head>
 <body>
     <div id="app">
-        <h1>Produtos</h1>
+        <h1>Números</h1>
         <ul>
-            <li v-for="value in produtos">{{ value }}</li>
-        </ul>
-
-        <ul>
-            <li v-for="(value, key) in produtos">{{ key }}: {{ value }}</li>
-        </ul>
-
-        <ul>
-            <li v-for="(value, key, index) in produtos">{{ index }}-{{ key }}: {{ value }}</li>
+            <li v-for="(value, index) in 30">[{{ index }}] {{ value }}</li>
         </ul>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
-            data: {
-                produtos: {
-                    id: 1,
-                    nome: 'Teclado',
-                    marca: 'Dell',
-                    valor: 100
-                }
-            }
         });
     </script>
 </body>
