049 v-for junto com v-if e filtragem de arrays

--- a/03-trabalhando-com-listas-e-condicionais/index.html
+++ b/03-trabalhando-com-listas-e-condicionais/index.html
@@ -3,34 +3,38 @@
 <head>
     <title>Vue.js - Guia Completo</title>
     <script type="text/javascript" src="https://unpkg.com/vue"></script>
-    <style>
-        .separador {
-            list-style: none;
-            border-bottom: 1px solid #000;
-        }
-    </style>
 </head>
 <body>
     <div id="app">
-        <h1>Produtos: </h1>
+        <h1>Tarefas: </h1>
         <ul>
-            <template v-for="produto in produtos">
-                <li>{{ produto.nome }}</li>
-                <li class="separador"></li>
-            </template>
+            <li v-for="tarefa in tarefas" :key="tarefa.id" v-if="!tarefa.completa">{{ tarefa.titulo }}</li>
         </ul>
+
+        <h1>Tarefas a fazer: </h1>
+        <ul v-if="tarefasIncompletas.length">
+            <li v-for="tarefa in tarefasIncompletas" :key="tarefa.id">{{ tarefa.titulo }}</li>
+        </ul>
+        <p v-else>Não há tarefas a fazer!</p>
     </div>
 
     <script type="text/javascript">
         new Vue({
             el: '#app',
             data: {
-                produtos: [
-                    { id: 1, nome: 'Monitor' },
-                    { id: 2, nome: 'Teclado' },
-                    { id: 3, nome: 'Mouse' },
-                    { id: 4, nome: 'Gabinete' }
+                tarefas: [
+                    { id: 1, titulo: 'Aprender JavaScript', completa: true },
+                    { id: 2, titulo: 'Aprender Vue.js', completa: false },
+                    { id: 3, titulo: 'Aprender Vuex', completa: false },
+                    { id: 4, titulo: 'Aprender VueRouter', completa: false }
                 ]
+            },
+            computed: {
+                tarefasIncompletas: function() {
+                    return this.tarefas.filter((tarefa) => {
+                        return !tarefa.completa;
+                    });
+                }
             }
         });
     </script>
